--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Document</title>
+	<title>Cozy House</title>
 </head>
 <body>
 
@@ -229,8 +229,7 @@
 			<div class="footer__img">
 				<img src="img/footer-dog.png" alt="" class="footer-img">
 			</div>
-		</div>
-		
+		</div>	
 	</footer>
 	<button class="scroll-btn"> &#8593;</button>
 	<div class="modal-wrapper">
@@ -252,11 +251,8 @@
 	
 	
 
-
-
-
 	<script src="scripts/jquery-3.4.1.min.js"></script>
 	<script src="scripts/slick.min.js"></script>
-	<script src="scripts/index.js"></script>
+	<script src="scripts/index.min.js"></script>
 </body>
 </html>
